<resources>
    <string name="app_name">Apollo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="logo">Logo</string>
    <string name="login">Entrar</string>
    <string name="failedLogin">Sua senha ou usuário estão incorretos</string>
    <string name="close">Fechar</string>

    <string name="notConnected">Não Conectado</string>
    <string name="connected">Conectado</string>
    <string name="reconnecting">Reconectando…</string>
    <string name="connectionError">Falha na Conexão</string>
    <string name="noInternetConnection">Sem Conexão com a Internet</string>
    <string name="connectionLogo">Logo representando a conexão</string>
</resources>
