<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:animateLayoutChanges="true"
        android:background="@drawable/roundlayout"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/relativeLayout">


        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:id="@+id/connectionLayout"
            android:background="@drawable/connection_layout">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_error_red_18dp"
                    android:id="@+id/connectionImage"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/connectionLogo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/notConnected"
                    android:id="@+id/serverConnection"
                    android:singleLine="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_toEndOf="@+id/connectionImage"
                    android:textColor="@color/material_red_700" />

            </RelativeLayout>

        </FrameLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/connectionLayout"
            android:id="@+id/logo"
            android:contentDescription="@string/logo"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:inputType="text"
            android:hint="@string/username"
            android:id="@+id/loginUsername" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginUsername"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/loginPassword"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginButton"
            android:layout_below="@+id/loginPassword"
            android:layout_centerHorizontal="true" />

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progressWheel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@+id/loginButton"
            wheel:matProg_barColor="#5588FF"
            wheel:matProg_progressIndeterminate="true"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>
